kubernetes/00-service1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service-1
          image: imagekitio/service-1
          ports:
          - containerPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    group: service1
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - port: 3000
      targetPort: 3000
